--- a/src/components/NumberFieldPrefix/NumberFieldPrefix.module.scss
+++ b/src/components/NumberFieldPrefix/NumberFieldPrefix.module.scss
@@ -2,13 +2,23 @@
 @import '../../styles/utilities.scss';
 @import '../../styles/typography.scss';
 
+.container {
+    @include flex-column-start;
+    max-width: 26.5rem;
+
+    label {
+        @include text-preset-4;
+        color: $slate-700;
+    }
+}
+
 .fieldOuter {
     height: 3rem;
     border-radius: 4px;
     border-width: 1px;
-    max-width: 26.5rem;
     border-color: $slate-500;
     border-style: solid;
+    margin-top: $spacing-150;
     @include flex-row;
     @include text-preset-3;
     // TODO: This can applied to whole app higher up.
