--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -26,7 +26,7 @@
 
 @mixin text-preset-4 {
   font-family: $font-primary;
-  font-size: 16px;
+  font-size: 1rem;
   line-height: $line-height-150;
   letter-spacing: 0px;
   font-weight: $font-weight-medium;
