--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -29,7 +29,7 @@
   font-size: 1rem;
   line-height: $line-height-150;
   letter-spacing: 0px;
-  font-weight: $font-weight-medium;
+  font-weight: medium;
 }
 
 @mixin text-preset-5 {
