fix: leaky styles

--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -2,7 +2,7 @@
 @import '../../styles/typography.scss';
 @import '../../styles/utilities.scss';
 
-div {
+.form {
     @include flex-column;
     max-width: 500px;
 }
