--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 html {
     font-size: 16px;
 }
+
+*, *::before, *::after {
+    box-sizing: border-box;
+  }
+
+  /* TODO: This global stuff can maybe be done with reacts createGlobalStyle hook. But it may mess up the rem sizing so be careful. */
