--- a/src/components/MortageCalculator/Form/FieldSet/RadioButton/RadioButton.module.scss
+++ b/src/components/MortageCalculator/Form/FieldSet/RadioButton/RadioButton.module.scss
@@ -1,6 +1,6 @@
-@import '../../styles/variables.scss';
-@import '../../styles/typography.scss';
-@import '../../styles/utilities.scss';
+@import '../../../../../styles/variables.scss';
+@import '../../../../../styles/typography.scss';
+@import '../../../../../styles/utilities.scss';
 
 .radioButton {
     display: flex;
