--- a/src/components/MortageCalculator/Form/Form.module.scss
+++ b/src/components/MortageCalculator/Form/Form.module.scss
@@ -1,6 +1,6 @@
-@import '../../styles/variables.scss';
-@import '../../styles/typography.scss';
-@import '../../styles/utilities.scss';
+@import '../../../styles/variables.scss';
+@import '../../../styles/typography.scss';
+@import '../../../styles/utilities.scss';
 
 .form {
     @include flex-column;
