--- a/src/components/MortageCalculator/Form/NumberField/NumberField.module.scss
+++ b/src/components/MortageCalculator/Form/NumberField/NumberField.module.scss
@@ -52,8 +52,8 @@ $state-colors: (
     @include flex-row;
     @include text-preset-3;
     height: 3rem;
-    border: 1px solid get-state-color(default, border);
-    border-radius: 4px;
+    border: 0.0625rem solid get-state-color(default, border);
+    border-radius: 0.25rem;
     margin-top: $spacing-150;
     box-sizing: border-box;
     overflow: hidden;
