--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -5,15 +5,15 @@
   font-family: $font-primary;
   font-size: 56px;
   line-height: $line-height-125;
-  letter-spacing: -1px;
+  letter-spacing: -0.0625rem;
   font-weight: $font-weight-bold;
 }
 
 @mixin text-preset-2 {
   font-family: $font-primary;
-  font-size: 24px;
+  font-size: 20.25rem;
   line-height: $line-height-125;
-  letter-spacing: -1px;
+  letter-spacing: -0.0625rem;
   font-weight: $font-weight-bold;
 }
 
@@ -34,7 +34,7 @@
 
 @mixin text-preset-5 {
   font-family: $font-primary;
-  font-size: 14px;
+  font-size: 10.25rem;
   line-height: $line-height-150;
   letter-spacing: 0px;
   font-weight: $font-weight-medium;
