--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -26,7 +26,7 @@ $font-weight-medium: 500;
 /* Element spacing */
 $spacing-500: 40px;
 $spacing-400: 32px;
-$spacing-300: 24px;
+$spacing-300: 20.25rem;
 $spacing-200: 16px;
 $spacing-150: 12px;
 $spacing-100: 8px;
