--- a/src/components/MortageCalculator/Form/RadioButtons/RadioButton/RadioButton.module.scss
+++ b/src/components/MortageCalculator/Form/RadioButtons/RadioButton/RadioButton.module.scss
@@ -3,31 +3,45 @@
 @import '../../../../../styles/utilities.scss';
 
 .radioButton {
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: start;
-    align-items: center;
+    @include flex-row-start-center;
+    @include text-preset-3;
+    color: $slate-900;
     border: 0.0625rem solid $slate-700;
     border-radius: 0.25rem;
-    @include text-preset-3;
+    width: 100%;
     height: 3rem;
+    margin-top: $spacing-150;
+    transition: border-color 400ms;
+    transition: 400ms;
 
-    input {
-        display: none;
-    }
-
-    &.hover {
+    &:hover {
         border-color: $lime;
+        transition: 400ms;
     }
 
-    &.selected {
-        background-color: $lime
+    &:focus-within {
+        border-color: $lime;
+        transition: 400ms;
     }
+
+    &.checked {
+        background-color: $lime-white;
+        border-color: $lime;
+
+        .checkbox {
+            color: $lime;
+        }
+    }
+}
+
+.input {
+    opacity: 0;
+    position: absolute;
 }
 
 .checkbox {
-    @include flex-row-center;
-    width: 19.5px;
     color: $slate-700;
+    width: 1.5rem;
+    height: 1.5rem;
+    margin: $spacing-150 $spacing-200;
 }
-
