--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -2,9 +2,8 @@
 
 @mixin text-preset-1 {
   font-family: $font-primary;
-  font-size: 24;
+  font-size: 3.5rem;
   line-height: $line-height-125;
-  letter-spacing: -0.0625rem;
   font-weight: bold;
 }
 
@@ -13,14 +12,14 @@
   font-size: 1.5rem;
   line-height: $line-height-125;
   letter-spacing: -0.0625rem;
-  font-weight: $font-weight-bold;
+  font-weight: bold;
 }
 
 @mixin text-preset-3 {
   font-family: $font-primary;
-  font-size: 18px;
+  font-size: 18;
   line-height: $line-height-125;
-  font-weight: $font-weight-bold;
+  font-weight: bold;
 }
 
 @mixin text-preset-4 {
@@ -28,13 +27,11 @@
   font-size: 1rem;
   line-height: $line-height-150;
   letter-spacing: 0px;
-  font-weight: medium;
 }
 
 @mixin text-preset-5 {
   font-family: $font-primary;
-  font-size: 10.25rem;
+  font-size: .875rem;
   line-height: $line-height-150;
   letter-spacing: 0px;
-  font-weight: $font-weight-medium;
 }
