--- a/src/styles/utilities.scss
+++ b/src/styles/utilities.scss
@@ -1,5 +1,6 @@
 @import 'variables';
 
+// Base flex mixin with customizable properties
 @mixin flex($direction: $flex-row, $justify: $flex-start, $align: stretch) {
     display: flex;
     flex-direction: $direction;
@@ -7,34 +8,65 @@
     align-items: $align;
 }
 
+// Flex column mixins
 @mixin flex-column {
-    @include flex($flex-column);
+    display: flex;
+    flex-direction: $flex-column;
+    justify-content: $flex-start;
+    align-items: stretch;
 }
 
 @mixin flex-column-start {
-    @include flex($flex-column, $flex-start);
+    display: flex;
+    flex-direction: $flex-column;
+    justify-content: $flex-start;
+    align-items: stretch;
 }
 
 @mixin flex-column-center {
-    @include flex($flex-column, $flex-center, $flex-center);
+    display: flex;
+    flex-direction: $flex-column;
+    justify-content: $flex-center;
+    align-items: $flex-center;
 }
 
+// Flex row mixins
 @mixin flex-row {
-    @include flex($flex-row);
+    display: flex;
+    flex-direction: $flex-row;
+    justify-content: $flex-start;
+    align-items: stretch;
 }
 
 @mixin flex-row-justify-between {
-    @include flex($flex-row, $flex-space-between);
+    display: flex;
+    flex-direction: $flex-row;
+    justify-content: $flex-space-between;
+    align-items: stretch;
 }
 
 @mixin flex-row-start {
-    @include flex($flex-row, $flex-start);
+    display: flex;
+    flex-direction: $flex-row;
+    justify-content: $flex-start;
+    align-items: stretch;
 }
 
 @mixin flex-row-center {
-    @include flex($flex-row, $flex-center, $flex-center);
+    display: flex;
+    flex-direction: $flex-row;
+    justify-content: $flex-center;
+    align-items: $flex-center;
 }
 
+@mixin flex-row-start-center {
+    display: flex;
+    flex-direction: $flex-row;
+    justify-content: $flex-start;
+    align-items: $flex-center;
+}
+
+// Media query mixin for tablets
 @mixin respond-to-tablet {
     @media (max-width: $max-width-tablet) {
         @content;
