--- a/src/components/MortageCalculator/Form/SubmitButton/SubmitButton.module.scss
+++ b/src/components/MortageCalculator/Form/SubmitButton/SubmitButton.module.scss
@@ -16,6 +16,10 @@
     &:hover {
         background-color: $lime-white;
     }
+
+    @include respond-to-phone {
+        max-width: none;
+    }
 }
 
 .icon {
