--- a/src/components/MortageCalculator/MortgageCalculator.module.scss
+++ b/src/components/MortageCalculator/MortgageCalculator.module.scss
@@ -9,5 +9,10 @@
 
     @include respond-to-tablet {
         @include flex-column-center;
+        max-width: 43rem;
+    }
+
+    @include respond-to-phone {
+        border-radius: 0;
     }
 }
