--- a/src/components/MortageCalculator/Results/Results/CalculatedResults.module.scss
+++ b/src/components/MortageCalculator/Results/Results/CalculatedResults.module.scss
@@ -19,7 +19,7 @@
     background-color: rgba(0, 0, 0, 0.25);
     border-top: .25rem solid $lime;
     border-radius: .5rem;
-    margin: $spacing-500 0;
+    margin: $spacing-500 0 0;
     padding: $spacing-400;
 
     hr {
