--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -17,7 +17,7 @@
 
 @mixin text-preset-3 {
   font-family: $font-primary;
-  font-size: 18;
+  font-size: 1.125rem;
   line-height: $line-height-125;
   font-weight: bold;
 }
