--- a/src/components/MortageCalculator/Results/Results.module.scss
+++ b/src/components/MortageCalculator/Results/Results.module.scss
@@ -3,11 +3,18 @@
 @import '../../../styles/utilities.scss';
 
 .resultsContainer {
-    @include flex-column-center;
     background-color: $slate-900;
     width: 100%;
     height: 100%;
     border-radius: 0 1.5rem 1.5rem 5rem;
-    max-width: 31.5rem;
-    padding: $spacing-400;
+    padding: $spacing-500;
+    flex: 1;
+
+    @include respond-to-tablet {
+        border-radius: 0 0 1.5rem 1.5rem;
+    }
+
+    @include respond-to-phone {
+        border-radius: 0;
+    }
 }
