--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -18,11 +18,6 @@ $font-primary: "Plus Jakarta Sans", sans-serif;
 $line-height-125: 1.25;
 $line-height-150: 1.5;
 
-// These might not be needed. Further look later!!!
-/* Font Weights */
-$font-weight-bold: 700;
-$font-weight-medium: 500;
-
 $spacing-500: 2.5rem;
 $spacing-400: 2rem;
 $spacing-300: 1.5rem;
@@ -35,4 +30,6 @@ $flex-center: center;
 $flex-space-between: space-between;
 $flex-column: column;
 $flex-row: row;
-$max-width-tablet: 48rem;
+
+$max-width-tablet: 62.5rem;
+$max-width-phone: 37.5rem;
