--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -35,3 +35,8 @@
   line-height: $line-height-150;
   letter-spacing: 0px;
 }
+
+@mixin mobile-text-preset-1 {
+  font-family: $font-primary;
+  font-size: 2.5rem;
+}
